chore: add validation to all form like requests
